--- a/mithril-infra/assets/docker/docker-compose-signer-unverified-p2p.yaml
+++ b/mithril-infra/assets/docker/docker-compose-signer-unverified-p2p.yaml
@@ -38,15 +38,6 @@ services:
         "/db"
       ]
 
-  mithril-relay:
-    image: ubuntu/squid:latest
-    container_name: mithril-relay-${SIGNER_ID}
-    profiles:
-      - mithril
-      - all
-    volumes:
-      - ./squid/squid.conf:/etc/squid/squid.conf:ro
-
   mithril-signer:
     image: ghcr.io/input-output-hk/mithril-signer:${MITHRIL_IMAGE_ID}
     container_name: mithril-signer-${SIGNER_ID}
@@ -57,7 +48,7 @@ services:
       - all
     environment:
       - RUST_BACKTRACE=1
-      - AGGREGATOR_ENDPOINT=http://${AGGREGATOR_CREDENTIALS}mithril-aggregator:8080/aggregator
+      - AGGREGATOR_ENDPOINT=http://mithril-signer-relay-${SIGNER_ID}:${SIGNER_RELAY_SERVER_PORT}
       - NETWORK=${NETWORK}
       - PARTY_ID=${PARTY_ID}
       - RUN_INTERVAL=120000
@@ -68,13 +59,38 @@ services:
       - CARDANO_CLI_PATH=/app/bin/cardano-cli
       - ERA_READER_ADAPTER_TYPE=${ERA_READER_ADAPTER_TYPE}
       - ERA_READER_ADAPTER_PARAMS=${ERA_READER_ADAPTER_PARAMS}
-      - RELAY_ENDPOINT=http://mithril-relay-${SIGNER_ID}:3128
     volumes:
       - ../data/${NETWORK}/mithril-signer-${SIGNER_ID}/mithril:/mithril-signer-${SIGNER_ID}/mithril
       - ../data/${NETWORK}/mithril-signer-${SIGNER_ID}/cardano/db/passive:/mithril-signer-${SIGNER_ID}/cardano/db
       - ../data/${NETWORK}/mithril-signer-${SIGNER_ID}/cardano/ipc:/ipc
     depends_on:
       cardano-node-signer:
+        condition: service_started
+    logging:
+      driver: "${LOGGING_DRIVER}"
+      options:
+        tag: "{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}"
+
+  mithril-signer-relay:
+    image: ghcr.io/input-output-hk/mithril-relay:${MITHRIL_IMAGE_ID}
+    container_name: mithril-signer-relay-${SIGNER_ID}
+    restart: always
+    user: ${CURRENT_UID}
+    profiles:
+      - mithril
+      - all
+    environment:
+      - RUST_BACKTRACE=1
+      - LISTEN_PORT=${SIGNER_RELAY_LISTEN_PORT}
+      - SERVER_PORT=${SIGNER_RELAY_SERVER_PORT}
+      - AGGREGATOR_ENDPOINT=http://${AGGREGATOR_CREDENTIALS}mithril-aggregator:8080/aggregator
+      - DIAL_TO=/dns4/mithril-aggregator-relay/tcp/${AGGREGATOR_RELAY_LISTEN_PORT}
+    ports:
+      - "${SIGNER_RELAY_LISTEN_PORT}:${SIGNER_RELAY_LISTEN_PORT}"
+      - "${SIGNER_RELAY_SERVER_PORT}:${SIGNER_RELAY_SERVER_PORT}"
+    command: [ "-vvv", "signer" ]
+    depends_on:
+      mithril-signer:
         condition: service_started
     logging:
       driver: "${LOGGING_DRIVER}"
