--- a/.github/workflows/actions/deploy-terraform-infrastructure/action.yml
+++ b/.github/workflows/actions/deploy-terraform-infrastructure/action.yml
@@ -17,6 +17,9 @@ inputs:
   cardano_network:
     description: Cardano network name.
     required: true
+  cardano_node_version:
+    description: Cardano node version.
+    required: true
   google_region:
     description: Google Cloud region name.
     required: true
@@ -133,6 +136,7 @@ runs:
       cat > ./env.variables.tfvars << EOF
         environment_prefix                                = "${{ inputs.environment_prefix }}"
         cardano_network                                   = "${{ inputs.cardano_network }}"
+        cardano_image_id                                  = "${{ inputs.cardano_node_version }}"
         google_region                                     = "${{ inputs.google_region }}"
         google_zone                                       = "${{ inputs.google_zone }}"
         google_machine_type                               = "${{ inputs.google_machine_type }}"
