--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -34,7 +34,7 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
     "sk_clone_enabled",
 ] }
 nom = "7.1.3"
-pallas-network = { git = "https://github.com/falcucci/pallas.git", branch = "test/add-epoch-no" }
+pallas-network = { git = "https://github.com/txpipe/pallas.git", branch = "main" }
 rand_chacha = "0.3.1"
 rand_core = { version = "0.6.4", features = ["getrandom"] }
 rayon = "1.8.0"
@@ -74,7 +74,7 @@ mithril-stm = { path = "../mithril-stm", version = "0.3", default-features = fal
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
 mockall = "0.11.4"
-pallas-codec = { git = "https://github.com/falcucci/pallas.git", branch = "test/add-epoch-no" }
+pallas-codec = { git = "https://github.com/txpipe/pallas.git", branch = "main" }
 reqwest = { version = "0.11.22", features = ["json"] }
 slog-async = "2.8.0"
 slog-scope = "4.4.0"
