Add a 'full' feature in 'mithril-common'
Prepare the compilation by putting behind features 'database' and 'process'
the code that will not be used in WASM.

--- a/mithril-common/Makefile
+++ b/mithril-common/Makefile
@@ -6,10 +6,10 @@ all: test build
 
 build:
 	# We use 'portable' feature to avoid SIGILL crashes
-	${CARGO} build --release --features portable
+	${CARGO} build --release --features portable,full
 
 test:
-	${CARGO} test
+	${CARGO} test --features full
 
 check:
 	${CARGO} check --release --all-features --all-targets
@@ -17,4 +17,4 @@ check:
 	${CARGO} fmt --check
 
 doc:
-	${CARGO} doc --no-deps --open
+	${CARGO} doc --no-deps --open --features full
