--- a/mithril-aggregator/Cargo.toml
+++ b/mithril-aggregator/Cargo.toml
@@ -18,7 +18,7 @@ cloud-storage = "0.11.1"
 config = "0.13.3"
 flate2 = "1.0.27"
 hex = "0.4.3"
-mithril-common = { path = "../mithril-common" }
+mithril-common = { path = "../mithril-common", features = ["full"] }
 openssl = { version = "0.10.57", features = ["vendored"], optional = true }
 openssl-probe = { version = "0.1.5", optional = true }
 reqwest = { version = "0.11.22", features = ["json"] }
