--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -31,7 +31,9 @@ chrono = { version = "0.4.31", features = ["serde"] }
 flate2 = { version = "1.0.27", optional = true }
 flume = { version = "0.11.0", optional = true }
 futures = "0.3.28"
-mithril-common = { path = "../mithril-common", version = "0.2" }
+mithril-common = { path = "../mithril-common", version = "0.2", features = [
+    "full",
+] }
 reqwest = { version = "0.11.22", features = ["json", "stream"] }
 semver = "1.0.19"
 serde = { version = "1.0.188", features = ["derive"] }
