--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -47,26 +47,26 @@ serde_with = "3.3.0"
 serde_yaml = "0.9.25"
 sha2 = "0.10.8"
 slog = "2.7.0"
-sqlite = { version = "0.31.1", features = ["bundled"] }
+sqlite = { version = "0.31.1", features = ["bundled"], optional = true }
 strum = { version = "0.25.0", features = ["derive"] }
 thiserror = "1.0.49"
-tokio = { version = "1.32.0", features = [
-    "fs",
-    "io-util",
-    "process",
-    "rt",
-    "sync",
-] }
+tokio = { version = "1.32.0", features = ["fs", "io-util", "rt", "sync"] }
 typetag = "0.2.13"
 walkdir = "2.4.0"
 warp = { version = "0.3.6", optional = true }
 
-[target.'cfg(not(windows))'.dependencies]
-# non-windows: use default rug backend
+[target.'cfg(target_family = "unix")'.dependencies]
+# only unix supports the default rug backend
 mithril-stm = { path = "../mithril-stm", version = "0.3" }
 
 [target.'cfg(windows)'.dependencies]
 # Windows doesn't support rug backend, fallback to num-integer
+mithril-stm = { path = "../mithril-stm", version = "0.3", default-features = false, features = [
+    "num-integer-backend",
+] }
+
+[target.'cfg(target_family = "wasm")'.dependencies]
+# WASM doesn't support rug backend, fallback to num-integer
 mithril-stm = { path = "../mithril-stm", version = "0.3", default-features = false, features = [
     "num-integer-backend",
 ] }
@@ -88,12 +88,14 @@ serde_json = "1.0.107"
 serde_yaml = "0.9.25"
 
 [features]
-default = []
-full = []
+default = ["database"]
+full = ["database", "process", "test_tools"]
 
 allow_skip_signer_certification = []
 # portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
 portable = ["mithril-stm/portable"]
+database = ["sqlite"]
+process = ["tokio/process"]
 
 # Enable all tests tools
 test_tools = ["apispec", "test_http_server"]
