--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -31,9 +31,6 @@ chrono = { version = "0.4.31", features = ["serde"] }
 flate2 = { version = "1.0.27", optional = true }
 flume = { version = "0.11.0", optional = true }
 futures = "0.3.28"
-mithril-common = { path = "../mithril-common", version = "0.2", features = [
-    "full",
-] }
 reqwest = { version = "0.11.22", features = ["json", "stream"] }
 semver = "1.0.19"
 serde = { version = "1.0.188", features = ["derive"] }
@@ -44,6 +41,17 @@ thiserror = "1.0.49"
 tokio = { version = "1.32.0", features = ["sync"] }
 uuid = { version = "1.5.0", features = ["v4"] }
 zstd = { version = "0.13.0", optional = true }
+
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+mithril-common = { path = "../mithril-common", version = "0.2", features = [
+    "full",
+] }
+
+[target.'cfg(target_family = "wasm")'.dependencies]
+mithril-common = { path = "../mithril-common", version = "0.2" }
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4.37"
+serde-wasm-bindgen = "0.6.0"
 
 [dev-dependencies]
 httpmock = "0.6.8"
