--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -50,7 +50,7 @@ slog = "2.7.0"
 sqlite = { version = "0.31.1", features = ["bundled"], optional = true }
 strum = { version = "0.25.0", features = ["derive"] }
 thiserror = "1.0.49"
-tokio = { version = "1.32.0", features = ["fs", "io-util", "rt", "sync"] }
+tokio = { version = "1.32.0", features = ["io-util", "rt", "sync"] }
 typetag = "0.2.13"
 walkdir = "2.4.0"
 warp = { version = "0.3.6", optional = true }
@@ -88,14 +88,15 @@ serde_json = "1.0.107"
 serde_yaml = "0.9.25"
 
 [features]
-default = ["database"]
-full = ["database", "process", "test_tools"]
+default = []
+full = ["database", "fs", "process", "test_tools"]
 
 allow_skip_signer_certification = []
 # portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
 portable = ["mithril-stm/portable"]
 database = ["sqlite"]
 process = ["tokio/process"]
+fs = ["tokio/fs"]
 
 # Enable all tests tools
 test_tools = ["apispec", "test_http_server"]
