--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -52,11 +52,12 @@ mithril-common = { path = "../mithril-common", version = "0.2" }
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4.37"
 serde-wasm-bindgen = "0.6.0"
+getrandom = { version = "0.2", features = ["js"] }
 
 [dev-dependencies]
 httpmock = "0.6.8"
 indicatif = { version = "0.17.7", features = ["tokio"] }
-mithril-common = { path = "../mithril-common", version = "0.2.133", features = [
+mithril-common = { path = "../mithril-common", version = "0.2", features = [
     "test_http_server",
 ] }
 mockall = "0.11.4"
@@ -68,9 +69,11 @@ warp = "0.3"
 
 [features]
 # Include nothing by default
-# TODO: rollback to default = []
-default = ["full"]
+default = []
+
+# Full feature set
 full = ["fs"]
+
 # Enable file system releated functionnality, right now that mean ony snapshot download
 fs = ["flate2", "flume", "tar", "tokio/rt", "zstd"]
 portable = ["mithril-common/portable"]
