--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -36,7 +36,7 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
 nom = "7.1.3"
 pallas-network = "0.20.0"
 rand_chacha = "0.3.1"
-rand_core = { version = "0.6.4", features = ["getrandom"] }
+rand_core = "0.6.4"
 rayon = "1.8.0"
 semver = "1.0.19"
 serde = { version = "1.0.188", features = ["derive"] }
@@ -89,17 +89,25 @@ serde_yaml = "0.9.25"
 
 [features]
 default = []
-full = ["database", "fs", "process", "test_tools"]
 
-allow_skip_signer_certification = []
-# portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
-portable = ["mithril-stm/portable"]
+# Full feature set
+full = ["random", "database", "fs", "test_tools"]
+random = ["rand_core/getrandom"]
 database = ["sqlite"]
-process = ["tokio/process"]
-fs = ["tokio/fs"]
+fs = ["tokio/fs", "tokio/process"]
 
+# Portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
+portable = ["mithril-stm/portable"]
+
+# Disable signer certification, to be used only for tests
+allow_skip_signer_certification = []
 # Enable all tests tools
 test_tools = ["apispec", "test_http_server"]
 # Enable tools to helps validate conformity to an OpenAPI specification
 apispec = ["glob", "http", "jsonschema", "warp"]
 test_http_server = ["warp"]
+
+[package.metadata.docs.rs]
+all-features = true
+# enable unstable features in the documentation
+rustdoc-args = ["--cfg", "docsrs"]
