--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -174,6 +174,10 @@ jobs:
         include:
         - package: mithril-stm
           api_token_secret_name: CRATES_IO_API_TOKEN
+        - package: mithril-common
+          api_token_secret_name: CRATES_IO_API_TOKEN_MITHRIL_COMMON
+        - package: mithril-client
+          api_token_secret_name: CRATES_IO_API_TOKEN_MITHRIL_CLIENT
           
     runs-on: ubuntu-22.04
     steps:
