--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -34,7 +34,7 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
     "sk_clone_enabled",
 ] }
 nom = "7.1.3"
-pallas-network = "0.20.0"
+pallas-network = { version = "0.20.0", optional = true }
 rand_chacha = "0.3.1"
 rand_core = "0.6.4"
 rayon = "1.8.0"
@@ -94,7 +94,7 @@ default = []
 full = ["random", "database", "fs", "test_tools"]
 random = ["rand_core/getrandom"]
 database = ["sqlite"]
-fs = ["tokio/fs", "tokio/process"]
+fs = ["tokio/fs", "tokio/process", "pallas-network"]
 
 # Portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
 portable = ["mithril-stm/portable"]
