--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -89,6 +89,7 @@ serde_yaml = "0.9.25"
 
 [features]
 default = []
+full = []
 
 allow_skip_signer_certification = []
 # portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
