--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -77,6 +77,7 @@ mithril-stm = { path = "../mithril-stm", version = "0.3", default-features = fal
 criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
 mockall = "0.12.0"
 pallas-codec = "0.21.0"
+rand_core = { version = "0.6.4", features = ["getrandom"] }
 reqwest = { version = "0.11.22", features = ["json"] }
 slog-async = "2.8.0"
 slog-scope = "4.4.0"
@@ -104,7 +105,7 @@ portable = ["mithril-stm/portable"]
 # Disable signer certification, to be used only for tests
 allow_skip_signer_certification = []
 # Enable all tests tools
-test_tools = ["apispec", "test_http_server"]
+test_tools = ["apispec", "test_http_server", "random"]
 # Enable tools to helps validate conformity to an OpenAPI specification
 apispec = ["glob", "http", "jsonschema", "warp"]
 test_http_server = ["warp"]
