--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
   "mithril-client-wasm",
   "mithril-common",
   "mithril-persistence",
+  "mithril-doc-derive",
   "mithril-relay",
   "mithril-signer",
   "mithril-stm",
