--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -23,6 +23,7 @@ bech32 = "0.9.1"
 blake2 = "0.10.6"
 chrono = { version = "0.4.33", features = ["serde"] }
 ckb-merkle-mountain-range = "0.6.0"
+config = "0.13.3"
 clap = { version = "4.4.6", features = ["derive"] }
 digest = "0.10.7"
 ed25519-dalek = { version = "2.1.0", features = ["rand_core", "serde"] }
@@ -35,12 +36,14 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
     "sk_clone_enabled",
 ] }
 minicbor = { version = "0.20", features = ["std", "half", "derive"], optional = true }
+mithril-doc-derive = { path = "../mithril-doc-derive" }
 nom = "7.1.3"
 pallas-addresses = { version = "0.23.0", optional = true }
 pallas-codec = { version = "0.23.0", optional = true }
 pallas-network = { version = "0.23.0", optional = true }
 pallas-primitives = { version = "0.23.0", optional = true }
 pallas-traverse = { version = "0.23.0", optional = true }
+quote = "1.0.35"
 rand_chacha = "0.3.1"
 rand_core = "0.6.4"
 rayon = "1.8.1"
@@ -54,6 +57,7 @@ serde_yaml = "0.9.31"
 sha2 = "0.10.8"
 slog = "2.7.0"
 strum = { version = "0.26.1", features = ["derive"] }
+syn = "2.0.48"
 thiserror = "1.0.56"
 tokio = { version = "1.35.1", features = ["io-util", "rt", "sync"] }
 typetag = "0.2.15"
