--- a/demo/protocol-demo/Cargo.toml
+++ b/demo/protocol-demo/Cargo.toml
@@ -14,7 +14,7 @@ blake2 = "0.10.6"
 clap = { version = "4.4.6", features = ["derive"] }
 hex = "0.4.3"
 log = "0.4.20"
-mithril-common = { path = "../../mithril-common" }
+mithril-common = { path = "../../mithril-common", features = ["fs"] }
 rand_chacha = "0.3.1"
 rand_core = "0.6.4"
 serde = { version = "1.0.188", features = ["derive"] }
