--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -96,8 +96,8 @@ default = []
 # Full feature set
 full = ["random", "database", "fs", "test_tools"]
 random = ["rand_core/getrandom"]
-database = ["sqlite"]
-fs = ["tokio/fs", "tokio/process", "pallas-network", "pallas-traverse"]
+database = ["dep:sqlite"]
+fs = ["tokio/fs", "tokio/process", "dep:pallas-network", "dep:pallas-traverse"]
 
 # Portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
 portable = ["mithril-stm/portable"]
@@ -107,8 +107,8 @@ allow_skip_signer_certification = []
 # Enable all tests tools
 test_tools = ["apispec", "test_http_server", "random"]
 # Enable tools to helps validate conformity to an OpenAPI specification
-apispec = ["glob", "http", "jsonschema", "warp"]
-test_http_server = ["warp"]
+apispec = ["dep:glob", "dep:http", "dep:jsonschema", "dep:warp"]
+test_http_server = ["dep:warp"]
 
 [package.metadata.docs.rs]
 all-features = true
