test: add tests for `mithril-client-wasm` These tests are intended to be performed in `Mithril Client multi-platform test`

--- a/mithril-client-wasm/Makefile
+++ b/mithril-client-wasm/Makefile
@@ -38,3 +38,9 @@ www-install:
 
 www-serve:
 	npm --prefix www run start
+
+www-test-install:
+	npm --prefix www-test install
+
+www-test-serve:
+	npm --prefix www-test run start
