--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -36,11 +36,16 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
 ] }
 minicbor = { version = "0.20", features = ["std", "half", "derive"], optional = true }
 nom = "7.1.3"
-pallas-addresses = { version = "0.21.0", optional = true }
-pallas-codec = { version = "0.21.0", optional = true }
-pallas-network = { version = "0.21.0", optional = true }
-pallas-primitives = { version = "0.21.0", optional = true }
-pallas-traverse = { version = "0.21.0", optional = true }
+# pallas-addresses = { version = "0.21.0", optional = true }
+pallas-addresses = { git = "https://github.com/falcucci/pallas.git", branch = "fix/legacy-transaction-utxo-by-address", optional = true }
+# pallas-codec = { version = "0.21.0", optional = true }
+pallas-codec = { git = "https://github.com/falcucci/pallas.git", branch = "fix/legacy-transaction-utxo-by-address", optional = true }
+# pallas-network = { version = "0.21.0", optional = true }
+pallas-network = { git = "https://github.com/falcucci/pallas.git", branch = "fix/legacy-transaction-utxo-by-address", optional = true }
+# pallas-primitives = { version = "0.21.0", optional = true }
+pallas-primitives = { git = "https://github.com/falcucci/pallas.git", branch = "fix/legacy-transaction-utxo-by-address", optional = true }
+# pallas-traverse = { version = "0.21.0", optional = true }
+pallas-traverse = { git = "https://github.com/falcucci/pallas.git", branch = "fix/legacy-transaction-utxo-by-address", optional = true }
 rand_chacha = "0.3.1"
 rand_core = "0.6.4"
 rayon = "1.8.0"
@@ -80,7 +85,8 @@ mithril-stm = { path = "../mithril-stm", version = "0.3", default-features = fal
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
 mockall = "0.12.0"
-pallas-crypto = "0.21.0"
+# pallas-crypto = "0.21.0"
+pallas-crypto = { git = "https://github.com/falcucci/pallas.git", branch = "fix/legacy-transaction-utxo-by-address" }
 reqwest = { version = "0.11.22", features = ["json"] }
 slog-async = "2.8.0"
 slog-scope = "4.4.0"
